them bo loc cho san pham

--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -143,11 +143,11 @@
           </div>
           <div class="filter-list-box"><i class="fa-solid fa-microchip"></i>RAM
             <div class="filter-list-box-menu2">
-              <ul>
-                <li>2 GB</li>
-                <li>3 GB</li>
+              <ul id="ram-filter">
                 <li>4 GB</li>
                 <li>6 GB</li>
+                <li>8 GB</li>
+                <li>12 GB</li>
               </ul>
             </div>
           </div>
@@ -188,10 +188,14 @@
             </div>
           </div>
         </div>
+
+        <div class="news">
+          <a href="">
+            <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:214:640/q:90/plain/https://media-asset.cellphones.com.vn/page_configs/01K6FF0CVTA576PWBAX5MN5ATF.jpg" alt="">
+          </a>
+        </div>
       </div>
-      <div class="list-products" id="list-products">
-        
-      </div>
+      <div class="list-products" id="list-products"></div>
     </div>
 
     <div class="pagination">
