--- a/FrontEnd/html/Phone.html
+++ b/FrontEnd/html/Phone.html
@@ -60,20 +60,19 @@
 
 <!-- section 1 -->
 <div class="section-one">
-    <div id="Phone"></div>
+    <div id="Phone" class="phone"></div>
+    
 </div>
+
+
 
 <div class="Shopping-Cart">
     <div class="cart-container">
-        <h2>Giỏ Hàng Của Bạn</h2>
-        <div class="cart-items" id="cart-items">
-            <!-- Các mục giỏ hàng sẽ được thêm vào đây -->
-        </div>
         <div class="cart-total">
-            <strong>Tổng Tiền: </strong><span id="total-price">0₫</span>
+            <i class="fa-solid fa-cart-shopping"></i>
+            <button class="checkout-btn">Mua </button>
         </div>
-        <button class="checkout-btn">Thanh Toán</button>
-</div>
+    </div>
 </div>
 </body>
 </html>
