--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -106,8 +106,8 @@
         <div class="top-list-box" onclick="filterByBrand('Oppo')">OPPO</div>
         <div class="top-list-box" onclick="filterByBrand('Vivo')">VIVO</div>
         <div class="top-list-box" onclick="filterByBrand('Realme')">REALME</div>
-        <div class="top-list-box" onclick="filterByBrand('Asus')">ASUS</div>
-        <div class="top-list-box" onclick="filterByBrand('Nokia')">NOKIA</div>
+        <div class="top-list-box" onclick="filterByBrand('Asus')">NUBIA</div>
+        <div class="top-list-box" onclick="filterByBrand('Nokia')">HONOR</div>
         <div class="top-list-box" onclick="filterByBrand('Nothing')">NOTHING</div>
       </div>
 
@@ -126,8 +126,8 @@
                 <li>Xiaomi</li>
                 <li>Vivo</li>
                 <li>Realme</li>
-                <li>Asus</li>
-                <li>Nokia</li>
+                <li>Nubia</li>
+                <li>Honor</li>
                 <li>Nothing</li>
               </ul>
             </div>
