--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -114,7 +114,8 @@
     </div>
 
     <div class="content">
-      <div class="filter">
+      <div class= "content-left">
+        <div class="filter">
         <div class="filter-top">Tìm kiếm nhanh</div>
         <div class="filter-list">
           <div class="filter-list-box"><i class="fa-solid fa-mobile-button"></i>Thương Hiệu
@@ -191,6 +192,14 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="news" id="news">
+        <div class="news-content"> tin tức 1 </div>
+        <div class="news-content" > tin tức 2 </div>
+        <div class="news-content"> tin tức 3 </div>
+      </div>
+
       </div>
       <div class="list-products" id="list-products"></div>
     </div>
