--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -14,6 +14,7 @@
     <script src="../javascript/Section_one_slide.js"></script>
     <script src="../javaScript/Section_two_page.js"></script>
     <script src="../javaScript/Section_two_productList.js"></script>
+    <!-- <script src ="../javaScript/Section_two_productListfilterByBrand.js"></script> -->
 </head>
 <body>
 
@@ -38,18 +39,30 @@
       </div>
 
       <!-- Menu -->
-      <button class="btn">
+      <div class="btn">
         <i class="fa-solid fa-house-user"></i><a href="Home.html">Trang Chủ </a>
-      </button>
+      </div>
 
       <!-- Location -->
-      <button class="btn">
+      <div class="btn">
         <i class="fa-solid fa-location-dot"></i> Lào Cai
-      </button>
-
-      <div class="news-list">
-        <i class="fa-solid fa-pager"></i> Tin Tức
       </div>
+
+      <div class="btn">
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html">Giới Thiệu</a>
+      </div>
+
+      <div class="news-btn">
+        <i class="fa-solid fa-pager"></i> Tin Tức
+        <div class="news-menu">
+          <ul>
+            <li><a href="">Tin công nghệ</a></li>
+            <li><a href="">Khuyến mãi</a></li>
+            <li><a href="">Sự kiện</a></li>
+          </ul>
+      </div>
+      </div>
+
 
       <!-- Search -->
       <div class="search-box">
@@ -101,14 +114,15 @@
       <div class="top-content">ĐIỆN THOẠI NỔI BẬT</div>
       <div class="top-list">
         <div class="top-list-box" onclick="filterByBrand('all')">ALL</div>
-        <div class="top-list-box" onclick="filterByBrand('Iphone')">IPHONE</div>
-        <div class="top-list-box" onclick="filterByBrand('Samsung')">SAMSUNG</div>
-        <div class="top-list-box" onclick="filterByBrand('Oppo')">OPPO</div>
-        <div class="top-list-box" onclick="filterByBrand('Vivo')">VIVO</div>
-        <div class="top-list-box" onclick="filterByBrand('Realme')">REALME</div>
-        <div class="top-list-box" onclick="filterByBrand('Asus')">NUBIA</div>
-        <div class="top-list-box" onclick="filterByBrand('Nokia')">HONOR</div>
-        <div class="top-list-box" onclick="filterByBrand('Nothing')">NOTHING</div>
+        <div class="top-list-box" onclick="filterByBrand('iphone')">IPHONE</div>
+        <div class="top-list-box" onclick="filterByBrand('samsung')">SAMSUNG</div>
+        <div class="top-list-box" onclick="filterByBrand('oppo')">OPPO</div>
+        <div class="top-list-box" onclick="filterByBrand('vivo')">VIVO</div>
+        <div class="top-list-box" onclick="filterByBrand('realme')">REALME</div>
+        <div class="top-list-box" onclick="filterByBrand('xiaomi')">XIAOMI</div>
+        <div class="top-list-box" onclick="filterByBrand('nubia')">NUBIA</div>
+        <div class="top-list-box" onclick="filterByBrand('honor')">HONOR</div>
+        <div class="top-list-box" onclick="filterByBrand('nothing')">NOTHING</div>
       </div>
 
     </div>
@@ -121,25 +135,25 @@
           <div class="filter-list-box"><i class="fa-solid fa-mobile-button"></i>Thương Hiệu
             <div class="filter-list-box-menu2">
               <ul>
-                <li>Iphone</li>
-                <li>Samsung</li>
-                <li>Oppo</li>
-                <li>Xiaomi</li>
-                <li>Vivo</li>
-                <li>Realme</li>
-                <li>Nubia</li>
-                <li>Honor</li>
-                <li>Nothing</li>
+                <li onclick="filterByBrand('iphone')">Iphone</li>
+                <li onclick="filterByBrand('samsung')">Samsung</li>
+                <li onclick="filterByBrand('oppo')">Oppo</li>
+                <li onclick="filterByBrand('xiaomi')">Xiaomi</li>
+                <li onclick="filterByBrand('vivo')">Vivo</li>
+                <li onclick="filterByBrand('realme')">Realme</li>
+                <li onclick="filterByBrand('nubia')">Nubia</li>
+                <li onclick="filterByBrand('honor')">Honor</li>
+                <li onclick="filterByBrand('nothing')">Nothing</li>
               </ul>
             </div>
           </div>
           <div class="filter-list-box"><i class="fa-solid fa-sack-dollar"></i>Mức Giá
             <div class="filter-list-box-menu2">
               <ul>
-                <li>Dưới 4 triệu</li>
-                <li>4 - 7 triệu</li>
-                <li>7 - 13 triệu</li>
-                <li>13 - 20 triệu</li>
+                <li>Dưới 5 triệu</li>
+                <li>5 - 10 triệu</li>
+                <li>10 - 15 triệu</li>
+                <li>15 - 20 triệu</li>
                 <li>20 - 30 triệu</li>
                 <li>Trên 30 triệu</li>
               </ul>
