--- a/FrontEnd/html/Cart.html
+++ b/FrontEnd/html/Cart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Giỏ hàng</title>
-  <link rel="stylesheet" href="../css/GioHang.css">
+  <link rel="stylesheet" href="../css/Cart.css">
 </head>
 <body>
   <header>🛒 Giỏ hàng</header>
