bo xung database và hoàn thiện hơn

--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -33,18 +33,13 @@
       <!-- Logo -->
       <div class="logo">
         <a href="Home.html">
-        <span class="logo-s">ThanhGiangShop</span>
+        <span class="logo-s" style="color: Orange">ThanhGiangShop</span>
         </a>
       </div>
 
       <!-- Menu -->
       <div class="btn">
         <i class="fa-solid fa-house-user"></i><a href="Home.html">Trang Chủ </a>
-      </div>
-
-      <!-- Location -->
-      <div class="btn">
-        <i class="fa-solid fa-location-dot"></i> Lào Cai
       </div>
 
       <div class="btn">
