--- a/FrontEnd/html/Phone.html
+++ b/FrontEnd/html/Phone.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="../css/Phone.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <script src="../javaScript/Phone.js"></script>
+<link rel="stylesheet" href="../css/Home_section_three.css">
+<link rel="stylesheet" href="../css/Home_footer.css">
+<link rel="stylesheet" href="../css/Home_header.css">
 </head>
 <body>
     <!-- header -->
@@ -61,9 +64,7 @@
 <!-- section 1 -->
 <div class="section-one">
     <div id="Phone" class="phone"></div>
-    
 </div>
-
 
 
 <div class="Shopping-Cart">
@@ -72,6 +73,40 @@
             <i class="fa-solid fa-cart-shopping"></i>
             <button class="checkout-btn">Mua </button>
         </div>
+    </div>
+
+
+    <div class="section-three">
+        <div class="section-three-content">
+        <div class="box">
+            <div class="box-Head"> Về Thành Giang Shop </div>
+            <a href="">Giới Thiệu Công Ty</a>
+            <a href="">Tuyển Dụng</a>
+            <a href="">Liên Hệ</a>
+        </div>
+        <div class="box">
+            <div class="box-Head"> Tổng Dài hỗ trợ miễn phí </div>
+            <div class="box-Body"> Tư Vấn-Mua Hàng : 999999999 (7h - 22h thứ 2-7)</div>
+            <div class="box-Body"> CSKH: 999999999 (8h - 21h hàng ngày)</div>
+        </div>
+        <div class="box">
+            <div class="box-Head"> Hỗ trợ khách hàng </div>
+            <a href="">Chính sách bảo hành</a>
+            <a href="">Chính sách đổi trả</a>
+            <a href="">Hướng dẫn mua hàng</a>
+        </div>
+        <div class="box">
+            <div class="box-Head"> Kết nối với chúng tôi </div>
+            <a href="facebook.com"><i class="fa-brands fa-facebook"></i> Facebook</a>
+            <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
+            <a href=""><i class="fa-brands fa-tiktok"></i> Tiktok</a>
+        </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <span>© 2025 Công ty TNHH Thành Giang Shop. GPDKKD: 123456789 do Sở KHĐT TP.Lào Cai cấp ngày 24/07/2025. Địa chỉ: Lào Cai. Điện thoại: 999999999. Email:ThanhGiang@gmial.com
     </div>
 </div>
 </body>
