sua them cart service

--- a/FrontEnd/html/Phone.html
+++ b/FrontEnd/html/Phone.html
@@ -28,7 +28,7 @@
     <!-- Logo -->
     <div class="logo">
     <a href="Home.html">
-    <span class="logo-s">ThanhGiangShop</span>
+    <span class="logo-s" style ="color: orange">ThanhGiangShop</span>
     </a>
     </div>
 
@@ -50,7 +50,7 @@
 
     <!-- Cart -->
     <div class="cart">
-    <a href="GioHang.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
+    <a href="Cart.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
     </div>
 
     <!-- Login nút đăng nhập  -->
@@ -66,15 +66,7 @@
     <div id="Phone" class="phone"></div>
 </div>
 
-
-<div class="Shopping-Cart">
-    <div class="cart-container">
-        <div class="cart-total">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <button class="checkout-btn">Mua </button>
-        </div>
-    </div>
-
+<!-- section 3 -->
 
     <div class="section-three">
         <div class="section-three-content">
@@ -108,6 +100,7 @@
     <div class="footer">
         <span>© 2025 Công ty TNHH Thành Giang Shop. GPDKKD: 123456789 do Sở KHĐT TP.Lào Cai cấp ngày 24/07/2025. Địa chỉ: Lào Cai. Điện thoại: 999999999. Email:ThanhGiang@gmial.com
     </div>
+
 </div>
 </body>
 </html>
