--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -41,9 +41,8 @@
       <div class="btn">
         <i class="fa-solid fa-house-user"></i><a href="Home.html">Trang Chủ </a>
       </div>
-
       <div class="btn">
-        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html">Giới Thiệu</a>
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
       </div>
 
       <div class="news-btn">
@@ -79,7 +78,7 @@
   <!-- section 1 -->
   <div class="section-one">
     <div class="section-one-content">
-      <div class="section-one-left">
+      <div class="section-one-left" id="section_one_left">
         <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/s25-0925-1.png" alt="anh1">
         <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/watch11-right.png" alt="anh2">
         <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/Camp-laptop-T9_Right-banner-1.png" alt="anh3">
