--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -14,6 +14,7 @@
     <script src="../javascript/Section_one_slide.js"></script>
     <script src="../javaScript/Section_two_page.js"></script>
     <script src="../javaScript/Section_two_productList.js"></script>
+    <script src="../javaScript/section_one_news.js"></script>
 </head>
 <body>
 
@@ -78,11 +79,7 @@
   <!-- section 1 -->
   <div class="section-one">
     <div class="section-one-content">
-      <div class="section-one-left" id="section_one_left">
-        <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/s25-0925-1.png" alt="anh1">
-        <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/watch11-right.png" alt="anh2">
-        <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/Camp-laptop-T9_Right-banner-1.png" alt="anh3">
-      </div>
+      <div class="section-one-left" id="section_one_news"></div>
 
       <div class="section-one-right">
         <div class="slider-controls">
@@ -90,11 +87,11 @@
             <button id="next-slide" class="slider-btn"><i class="fa fa-chevron-right"></i></button>
           </div>
           <div class="list-slides">
-              <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_Home_iPhone_17_%20Pro_Opensale_v2.png" alt="iPhone 17">
+              <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/Z7-Sliding-1025.png" alt="iPhone 17">
               <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/galaxy-s25-fe-home-0925.png" alt="Galaxy S25">
               <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/app3-home.jpg" alt="AirPods Pro 3">
-              <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_Home_iPhone_17_%20Air_Opensale_v2.png" alt="Xiaomi 15T">
-              <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/xiaomi-15t-5g-home-3.png" alt="Asus Vivobook">
+              <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/nubia-neo-3-4g-home-0925.jpg" alt="Xiaomi 15T">
+              <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_iPhone_17_Pro_Opensale_v3.png" alt="Asus Vivobook">
           </div>
       </div>
     </div>
