--- a/FrontEnd/html/LoginClient.html
+++ b/FrontEnd/html/LoginClient.html
@@ -13,9 +13,9 @@
   <div class="login-container">
     <h2>Đăng nhập</h2>
     <form>
-      <input type="text" id="username" placeholder="Tên đăng nhập" required>
+      <input type="text" id="username" placeholder="Tên đăng nhập" required autocomplete="off">
       <input type="password" id="password" placeholder="Mật khẩu" required>
-      <button type="submit" onclick="login(event)">Đăng nhập</button>
+      <button type="submit" onclick="login(event)"> Đăng nhập</button>
     </form>
     <p id="error-msg"></p>
     <p>Chưa có tài khoản? <a href="#">Đăng ký</a></p>
