--- a/FrontEnd/html/Phone.html
+++ b/FrontEnd/html/Phone.html
@@ -16,7 +16,7 @@
 <header class="navbar">
 <div class="top-bar">
     <div class="top-bar-content">
-    <span>Xin chào mọi người tới với Thành Giang Shop</span>
+    <span>Xin chào mọi người tới với Văn Thành Shop</span>
     <span> | Sản phẩm Chính hãng - Uy tín- Chất lượng cao</span>
     <span> | Giao nhanh - Miễn phí cho đơn 300k</span>
     <span> | Tra cứu đơn hàng</span>
@@ -28,7 +28,7 @@
     <!-- Logo -->
     <div class="logo">
     <a href="Home.html">
-    <span class="logo-s" style ="color: orange">ThanhGiangShop</span>
+    <span class="logo-s" style ="color: orange">VĂN THÀNH SHOP</span>
     </a>
     </div>
 
@@ -38,9 +38,9 @@
     </button>
 
     <!-- Location -->
-    <button class="btn">
-    <i class="fa-solid fa-location-dot"></i> Lào Cai
-    </button>
+    <div class="btn">
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
+    </div>
 
     <!-- Search -->
     <div class="search-box">
@@ -71,7 +71,7 @@
     <div class="section-three">
         <div class="section-three-content">
         <div class="box">
-            <div class="box-Head"> Về Thành Giang Shop </div>
+            <div class="box-Head"> Về Văn Thành Shop </div>
             <a href="">Giới Thiệu Công Ty</a>
             <a href="">Tuyển Dụng</a>
             <a href="">Liên Hệ</a>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="footer">
-        <span>© 2025 Công ty TNHH Thành Giang Shop. GPDKKD: 123456789 do Sở KHĐT TP.Lào Cai cấp ngày 24/07/2025. Địa chỉ: Lào Cai. Điện thoại: 999999999. Email:ThanhGiang@gmial.com
+        <span>© 2025 Công ty TNHH Văn Thành Shop. GPDKKD: 123456789 do Sở KHĐT TP.Lào Cai cấp ngày 24/07/2025. Địa chỉ: Lào Cai. Điện thoại: 999999999. Email:luvanthanh@gmail.com
     </div>
 
 </div>
